# parallax

./: .gitignore  .parallax.yaml  .parallax.yaml.example  CHANGELOG.md  README.md  pyproject.toml
src/parallax/: __init__.py  __main__.py
src/parallax/cli/: __init__.py  commands.py  main.py
src/parallax/core/: __init__.py  config.py  engine.py  suppression.py  types.py
src/parallax/diff/: __init__.py  parser.py  types.py
src/parallax/lang/: __init__.py  base.py  go.py  javascript.py  python.py
src/parallax/lenses/: __init__.py  accessibility.py  base.py  custom.py  maintainability.py  performance.py  security.py  testing.py
src/parallax/output/: __init__.py  base.py  json.py  markdown.py  sarif.py  text.py
tests/: __init__.py  test_cli.py  test_config.py  test_diff_parser.py  test_diff_types.py  test_engine.py  test_go_analyzer.py  test_javascript_analyzer.py  test_lang_base.py  test_package.py  test_python_analyzer.py  test_suppression.py  test_types.py
tests/test_lenses/: __init__.py  test_accessibility.py  test_base.py  test_custom.py  test_maintainability.py  test_performance.py  test_security.py  test_testing.py
tests/test_output/: test_formatters.py
